*) New: Player profile has new steamprofile field /hls_set steamprofile
		url
*) New: Steam profile page lookup via SteamID. BCmath support (PHP) is
		needed.
	http://www.php.net/manual/en/book.bc.php
*) New: Clan Profile can new enter a steam group URL
*) New: Daemon can now looup country and city. Using Maxmind GeoIP.
		Please read the documentation on how to use this feature !!
*) Changed: Only one admin user is now possible. Dropped admin rights
			for now.
*) Changed: Design options removed from options table
*) Changed: imgpaht and imgdir option removed
*) Changed: Host statistics in admin disabled. New version will include
			this again.
*) Changed: Constant INCLUDE_PATH removed.
*) Changed: hlstats.php file renamed to index.php
				scripturl option has been removed.
*) Changed: sorting pictures renamed
*) Changed: replaced AMCharts with pChart
*) Changed: Information about real kills removed
*) Changed: hls_set options cleanup
*) Changed: hlstats.conf.ini DNSResolveIP and DNSTimeout removed.
			Replaced by UseGEOIP
*) Changed: Dropped hlstats_Server defaultMap.
			While loading servers from DB we get the current map via
			ServerQueries. This should avaid "unknown" maps
*) Fixed: typo in lang (thx to LuBJe)
*) Fixed: bug in admin -> Tools -> Reset (thx to conan)
*) Fixed: remove the ; in rcon commands (thx to Par0noid)
*) Fixed: Issue #23
*) Fixed: Issue #26



1.51 (2009-11-23)
*) New: HLStats can now be translated via ini files. The default language
		is set in the hlstats.conf.php file. Update the configuration !
		Help and some graphics are still missing
*) New: Visitors can now change the language of the web content via cookies
*) New: Player are now seperated into "active" and "inactive" Players
		The players which have now activity (skill change) in a given timeframe
		are set to inactive and will not be show in players overview.
*) New: Role pictures in player info page if available.