@@ -75,3 +75,5 @@ UPDATE `#DB_PREFIX#_Events_Connects` SET `countryCode` = '';
 ALTER TABLE `#DB_PREFIX#_Events_Connects` ADD `city` VARCHAR( 128 ) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL;
 
 ALTER TABLE `#DB_PREFIX#_Servers` DROP `defaultMap`;
+
+ALTER TABLE `#DB_PREFIX#_Players` ADD `lastUpdate` TIMESTAMP NOT NULL ;
